style: fixed text input width on small devices. changed up timer alignment look across different devices

--- a/TimerComponent/Timer.css
+++ b/TimerComponent/Timer.css
@@ -5,7 +5,7 @@
 }
 
 .Timer-Text {
-  width: 250px;
+  width: 100%;
   display: inline-block;
   margin-left: 10px;
 }
@@ -20,8 +20,7 @@
 }
 
 .Timer-Buttons {
-  /*margin-left: 10px;
-  display: inline-block;*/
+  padding-right: 5px;
 }
 
 .Timer-HideIcon {
